fix z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -522,6 +522,7 @@ a.shopBgBtn:hover {
 	left: 0;
 	bottom: 0;
 	background: #fff;
+	z-index: 12;
 }
 
 .cartPageHeading {
